XRCanvasInputProvider listens to pointer events instead of mouse events.

XRSession's selectstart event is fired on pointerdown event now.

Bug: 887904
Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ib37fb8c46d9afd832b89499b14fa7baa741de727
Reviewed-on: https://chromium-review.googlesource.com/c/1244636
Commit-Queue: Sarath Singapati <sarath.singapati@huawei.com>
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602113}