third_party/blink/renderer/modules/xr/xr_canvas_input_provider.h
@@ -17,7 +17,7 @@ namespace blink {
 
 class EventListener;
 class HTMLCanvasElement;
-class MouseEvent;
+class PointerEvent;
 class XRInputSource;
 class XRSession;
 
@@ -35,7 +35,8 @@ class XRCanvasInputProvider
 
   bool ShouldProcessEvents();
 
-  void OnClick(MouseEvent*);
+  void OnPointerDown(PointerEvent*);
+  void OnPointerUp(PointerEvent*);
 
   XRInputSource* GetInputSource();
 
@@ -45,7 +46,7 @@ class XRCanvasInputProvider
   }
 
  private:
-  void UpdateInputSource(MouseEvent*);
+  void UpdateInputSource(PointerEvent*);
   void ClearInputSource();
 
   const Member<XRSession> session_;
